--- a/WebContent/media/css/framework.css
+++ b/WebContent/media/css/framework.css
@@ -32,6 +32,7 @@
 .left{float: left;}
 .hide{display: none;}
 .center{float: none !important;margin: 0 auto;}
+.display{display: block;}
  
 @media all and (max-width: 745px){
     .container{padding: 0;}
