--- a/WebContent/media/css/framework.css
+++ b/WebContent/media/css/framework.css
@@ -26,7 +26,7 @@
 .col-9,
 .col-10,
 .col-11,
-.col-12{float: left;box-sizing: border-box;}
+.col-12{float: left;box-sizing: border-box; min-height: 1px;}
  
 .right{float: right;}
 .left{float: left;}
