Doing login and register form

--- a/WebContent/media/css/style.css
+++ b/WebContent/media/css/style.css
@@ -24,6 +24,7 @@ header .header_button:hover i {
 	background: rgba(0, 0, 0, 0.5);
 	position: absolute;
 	height: 100%;
+	z-index: 9999;
 }
 
 .loading:after {
